More stats fixes

--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-12 col-xs-12">  
-            <div class="center-block left-column pull-left">      
+            <div class="left-column">      
                 <div class="stat-header">{{participants.length}} Total Contributors</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="participant in participants"
@@ -24,7 +24,7 @@
         </div>
         
         <div class="col-md-4 col-sm-12 col-xs-12">
-            <div class="center-column pull-left">            
+            <div class="center-column">            
                 <div class="stat-header">{{countries.length}} Countries Represented</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="country in countries"
@@ -40,7 +40,7 @@
         
         
         <div class="col-md-4 col-sm-12 col-xs-12">  
-            <div class="center-block right-column pull-left">
+            <div class="right-column">
                 <div class="stat-header">{{founders.length}} Startups Founded by Women</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="founder in founders"
