--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -75,7 +75,7 @@ h7 {
 }
 
 .view-bottom-spacer {
-    height: 600px;
+    height: 80px;
 }
 
 .page-container.expanded {
@@ -836,7 +836,7 @@ p.continue-text {
     .center-column,
     .left-column,
     .right-column {
-        float: left;
+        float: left !important;
     }
 
 }
@@ -858,17 +858,14 @@ p.continue-text {
     }
     
     .center-column,
+    .left-column,
     .right-column {
-        margin-top: 25px;
+        float: left !important;
     }
     
     .center-column,
-    .left-column,
     .right-column {
-        margin-left: auto;
-        margin-right: auto;
-        clear: both;
-        float: none;
+        margin-top: 25px;
     }
     
     
@@ -890,17 +887,24 @@ p.continue-text {
         font-size: 11px;
     }
     
+    .left-column {
+        float: right !important;
+    }
+    
+    .center-column,
+    {
+        margin-left: auto;
+        margin-right: auto;
+        float: none !important;
+    }
+    
+    .right-column {
+        float: left !important;
+    }
+    
     .center-column,
     .right-column {
         margin-top: 0px;
-    }
-    
-    .left-column {
-        float: right;
-    }
-    
-    .right-column {
-        float: left;
     }
     
 }
