--- a/public/partials/blog.html
+++ b/public/partials/blog.html
@@ -8,7 +8,91 @@
             </div>
         </div>
                
-               <ul class="list-unstyled blog-thumbnail-row">
+        <ul class="list-unstyled blog-thumbnail-row">
+            
+        <li class="col-md-4 blog-thumbnail">
+               <a href="https://medium.com/p/2a8fc0550b3e" target="_blank">
+                   <div class="blog-thumbnail-inner">
+                       <div class="background-overlay"></div>
+                       <div class="text-overlay">
+                           <div class="text-overlay-inner center-block">
+                                <p class="quote">Project FEW is an initiative for female founders and females working at early-stage companies to place themselves on a virtual interactive map, in effort to quantify the sheer number of women leading early-stage companies worldwide.
+                                </p>
+                                <p class="continue-text">Continue reading &rarr;</p>
+                            </div>
+                       </div>
+                       <div class="caption-overlay">
+                            <div class="caption-title">
+                                Female Entrepreneurs—Put Yourselves On The Map!
+                            </div>
+                            <div class="author">
+                                Aparna Sud
+                            </div>
+                            <div class="author">
+                                Principal, FEW
+                            </div>
+                       </div>                           
+                        <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/2000/1600/gradv/29/81/55/1*adMvHxQ7b2MaA_YYf6WbmA.png" 
+                            class="thumbnail img-responsive">
+                    </div>    
+                </a>
+            </li>
+               
+           <li class="col-md-4 blog-thumbnail">
+                  <a href="https://medium.com/p/5add2e4f2744" target="_blank">
+                      <div class="blog-thumbnail-inner">
+                          <div class="background-overlay"></div>
+                          <div class="text-overlay">
+                              <div class="text-overlay-inner center-block">
+                                   <p class="quote">I do try to use online task management tools like Trello, but nothing beats a good old fashioned pen and paper to-do list to keep the business on track.
+                                   </p>
+                                   <p class="continue-text">Continue reading &rarr;</p>
+                               </div>
+                          </div>
+                          <div class="caption-overlay">
+                               <div class="caption-title">
+                                   What's In My Bag?
+                               </div>
+                               <div class="author">
+                                   Danielle Carruthers
+                               </div>
+                               <div class="author">
+                                   Co-founder &#38; CEO, theSedge.org
+                               </div>
+                          </div>                           
+                           <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/2000/1600/gradv/29/81/55/1*ykIV4Epfir6dJx9aoPE_oQ.jpeg" 
+                               class="thumbnail img-responsive">
+                       </div>    
+                   </a>
+               </li>
+                   
+               <li class="col-md-4 blog-thumbnail">
+                      <a href="https://medium.com/female-entrepreneurs-of-the-world/4379589ef7dd" target="_blank">
+                          <div class="blog-thumbnail-inner">
+                              <div class="background-overlay"></div>
+                              <div class="text-overlay">
+                                  <div class="text-overlay-inner center-block">
+                                       <p class="quote">As a child, I believed that bananas were made with milk. I couldn’t understand how milk made its way into a fruit but it didn’t really matter at that point.
+                                       </p>
+                                       <p class="continue-text">Continue reading &rarr;</p>
+                                   </div>
+                              </div>
+                              <div class="caption-overlay">
+                                   <div class="caption-title">
+                                       What's In My Bag?
+                                   </div>
+                                   <div class="author">
+                                       Sarah Hébert
+                                   </div>
+                                   <div class="author">
+                                       Head of Content &#38; Curation, Shutter
+                                   </div>
+                              </div>                           
+                               <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/1800/1440/gradv/29/81/55/1*IdVCLnXeIHN_iebFVqvKXg.jpeg" 
+                                   class="thumbnail img-responsive">
+                           </div>    
+                       </a>
+                   </li>
                    
                    <li class="col-md-4 blog-thumbnail">
                        <a href="https://medium.com/female-entrepreneurs-of-the-world/2c57c4d8eb18" target="_blank">
