--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -88,7 +88,7 @@
                             <input type="url" 
                                 name="companyurl"
                                 class="memberform-field"
-                                placeholder="Company URL (Include http:// or https://)"
+                                placeholder="Company URL (You must include http:// or https://)"
                                 ng-model="member.companyurl" />
                         </div>
                     </div>
