--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -38,7 +38,7 @@
                             <p class="media-heading principal-name">
                                 <a href="http://www.linkedin.com/in/allisoncarmen" target="_blank">Allison Carmen</a>
                             </p>
-                            <p class="principal-city">Saint Louis, MS</p>
+                            <p class="principal-city">Saint Louis, MO</p>
                             <p class="principal-city">United States</p>
                          </div>
                      </div>
