--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,7 +132,7 @@ h7 {
 }
 /*push page contents below the nav bar*/
 .top-spacer {
-  padding-top: 20px;
+  padding-top: 0px;
 }
 .nav-line {
   display: inline-block;
@@ -612,7 +612,7 @@ div.stat-header {
   font-style: italic;
   font-weight: 300;
   line-height: 19px;
-  font-size: 13px;
+  font-size: 13px !important;
 }
 .text-overlay-inner {
   max-width: 80%;
