--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -163,7 +163,7 @@ h7 {
 
 /*push page contents below the nav bar*/
 .top-spacer {
-    padding-top: 20px;
+    padding-top: 0px;
 }
 
 .nav-line {
@@ -726,7 +726,7 @@ div.stat-header {
     font-style: italic;
     font-weight: 300;
     line-height: 19px;
-    font-size: 13px;
+    font-size: 13px !important;
 }
 
 .text-overlay-inner {
