--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -359,6 +359,12 @@ a .nav-links {
     font-size: 14px !important;
     color: #6600FF;
     font-weight: 400;
+    &:visited {
+        color: #6600FF;
+    }
+    &:hover {
+        color: gray !important;
+    }
 }
 
 .member-address {
