Character restriction and content updates
* 140 Character restriction added to participate form.
* Updated information on events page.

--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -6,25 +6,38 @@
         <div class="row">
             <div class="col-md-12 section-intro">
                 <div class="event-divider">
-                    <h6>April 2014 (Exact Date TBC)</h6>
+                    <h6>April 25, 2014 (6PM)</h6>
                     <h6>Santiago, Chile</h6>
                     <div class="event-comingup">Next Event</div>
-                    <h3>Fundraising Workshop with Clare Bullus</h3>
+                    <h3>New models: Disruptive Educational Models for Kids and College Students</h3>
                     <p>
-                        <h7>Claire Bullus a female investor from <a href="http://cambridgecapitalgroup.co.uk/home.php" target="_blank">Cambridge Capital Group</a> who will speak to us on Skype the second or third week of April. As female entrepreneurs, this is a great opportunity for us! We can ask questions and clear our general doubts about business, pitching to investors, strategy, etc. Those who want to participate in the workshop, please send me by this Friday a 150 characters elevator pitch of your business, your name, country and any questions you have about pitching to investors.
+                        <h7>FEW and <a href="http://www.bstinnovation.com/" target="_blank">BSTinnovation</a> invite you this Friday, April 25th, 6pm at CMI to meet with Stefania Druga and Kirstin Engemann, to learn about Hackidemia y Sparktalent—new models of disruptive educational models for kids and college students.
                         </h7>
                     </p>
                 </div>
+                
                 <div class="event-divider">
-                    <h6>May 1, 2014</h6>
+                    <h6>May 1, 2014 (5—7PM)</h6>
                     <h6>St. Louis, Missouri</h6>
                     <div class="event-comingup">Upcoming in May</div>
-                    <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1" target="_blank"><h3>Brag Pitch Night</h3></a>
+                    <a href="https://www.eventbrite.com/e/west-may-day-party-tickets-9120843689" target="_blank"><h3>WEST May Day Party: Brag Pitching</h3></a>
                     <p>
-                        <h7>We've all pitched our businesses a million times, but many women are really uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this. What better way to get super vulnerable and step waaaay outside your comfort zone than with wine and good people?
+                        <h7>Spring is a time for celebration! This May Day, join WEST as we celebrate the accomplishments of our members by hosting St. Louis' first brag pitch and networking event in the beautiful 7th floor Law Library of the historic Lammert Building downtown. Brag pitching is an amazing way to push beyond your comfort zone, get to know people, and improve on key skills like public speaking. Be sure to <a href="https://www.eventbrite.com/e/west-may-day-party-tickets-9120843689">register</a> to attend!                      
                         </h7>
                     </p>
                 </div>
+                
+                <div class="event-divider">
+                    <h6>May 2, 2014 (11AM—12PM)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <div class="event-comingup">Upcoming in May</div>
+                    <h3>Fundraising Workshop with Clare Bullus</h3>
+                    <p>
+                        <h7>Clare Bullus a female investor from <a href="http://cambridgecapitalgroup.co.uk/home.php" target="_blank">Cambridge Capital Group</a> who will speak to us on Skype on fundraising. As female entrepreneurs, this is a great opportunity for us! We can ask questions and clear our general doubts about business, pitching to investors, strategy, etc. Those who want to participate in the workshop, please prepare a 150 characters elevator pitch of your business, your name, country and any questions you have about pitching to investors.
+                        </h7>
+                    </p>
+                </div>
+                
                 <div class="event-divider">
                     <h6>March 20, 2014 (7—8PM)</h6>
                     <h6>Santiago, Chile</h6>
