--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -113,6 +113,7 @@
                                 name="companydescription"
                                 placeholder="Company description (Max 140 characters)" 
                                 ng-model="member.companydescription"
+                                textarea-max-length="140"
                                 capitalize-first>
                             </textarea>
                         </div>
