--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -88,8 +88,9 @@
                             <input type="url" 
                                 name="companyurl"
                                 class="memberform-field"
-                                placeholder="Company URL (You must include http:// or https://)"
-                                ng-model="member.companyurl" />
+                                placeholder="Company URL* (You must include http:// or https://)"
+                                ng-model="member.companyurl"
+                                required />
                         </div>
                     </div>
                 </div>
