Add http on focus

--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -90,6 +90,7 @@
                                 class="memberform-field"
                                 placeholder="Company URL* (You must include http:// or https://)"
                                 ng-model="member.companyurl"
+                                prepend-http
                                 required />
                         </div>
                     </div>
