--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -13,7 +13,7 @@
                 <p>— <a href="http://www.linkedin.com/company/female-entrepreneurs-of-the-world" target="_blank">LinkedIn</a></p>
                 <p>— <a href="mailto:holafew@gmail.com" target="_blank">Email</a></p>
                 
-                <p>For press inquiries, general questions, or if you're interested in becoming a principal of FEW, please <a href="mailto:holafew@gmail.com" target="_blank">email us</a>.</p>
+                <p>For press inquiries, general questions, please <a href="mailto:holafew@gmail.com" target="_blank">email us</a>.</p>
                 
                 <p style="font-style:italic;'">ProjectFEW.org was designed and developed by the creators behind <a href="http://www.webcassette.com" target="_blank">Web Cassette</a>. The code for this site is freely available under the MIT Open Source Initiative at <a href="https://github.com/jenklee/few" target="_blank">GitHub</a>.</p>
             
