--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -200,13 +200,13 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center ">            
             <h5 class="principal-text">
-                <a ng-click="showDescription=!showDescription">Interested in becoming a Principal of FEW?</a>
+                <a ng-click="showDescription=!showDescription">Interested in becoming an ambassador with FEW?</a>
             </h5>
             <div class="animate-show principal-text-description text-left center-block"
                 ng-show="showDescription">
-                <p>Becoming a principal is a commitment to <a ng-href="/mission">FEW’s mission</a>, and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
+                <p>Becoming an ambassador is a commitment to <a ng-href="/mission">FEW’s mission</a>, and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that ambassadors organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
 
-                <p>If you’re interested in becoming a principal for F-E-W, please <a href="mailto:holafew@gmail.com" target="_blank">email</a> us. We look forward to hearing from you!</p>
+                <p>If you’re interested, please <a href="mailto:holafew@gmail.com" target="_blank">email</a> us. We look forward to hearing from you!</p>
             </div>
         </div>
     </div>
