Updated text for blog and events page
Updated text for blog and events

--- a/public/partials/blog.html
+++ b/public/partials/blog.html
@@ -10,6 +10,90 @@
                
         <ul class="list-unstyled blog-thumbnail-row">
             
+            <li class="col-md-4 blog-thumbnail">
+                   <a href="https://medium.com/p/f618fb63715f" target="_blank">
+                       <div class="blog-thumbnail-inner">
+                           <div class="background-overlay"></div>
+                           <div class="text-overlay">
+                               <div class="text-overlay-inner center-block">
+                                    <p class="quote">We tend to think that the world of startups is governed by darwinian ideals, and that an entrepreneur needs to exemplify the dare-devil alpha male who commands attention at all times.
+                                    </p>
+                                    <p class="continue-text">Continue reading &rarr;</p>
+                                </div>
+                           </div>
+                           <div class="caption-overlay">
+                                <div class="caption-title">
+                                    The Introverted Entrepreneur: An Anomaly, Or a Recipe for Success?
+                                </div>
+                                <div class="author">
+                                    Hannes Hapke
+                                </div>
+                                <div class="author">
+                                    Co-founder, Renooble
+                                </div>
+                           </div>                           
+                            <img src="https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/60/darken/25/1*GknlE1AJYaPGazTec7KSgQ.jpeg" 
+                                class="thumbnail img-responsive">
+                        </div>    
+                    </a>
+                </li>
+            
+            <li class="col-md-4 blog-thumbnail">
+                   <a href="https://medium.com/p/4c846dfdf2a4" target="_blank">
+                       <div class="blog-thumbnail-inner">
+                           <div class="background-overlay"></div>
+                           <div class="text-overlay">
+                               <div class="text-overlay-inner center-block">
+                                    <p class="quote">Project FEW has been growing steadily since our official launch just two weeks ago. Today, we have over 250 contributors from 33 countries, from Canada to India and beyond!  
+                                    </p>
+                                    <p class="continue-text">Continue reading &rarr;</p>
+                                </div>
+                           </div>
+                           <div class="caption-overlay">
+                                <div class="caption-title">
+                                    The ABC's of Project FEW
+                                </div>
+                                <div class="author">
+                                    Allison Carmen
+                                </div>
+                                <div class="author">
+                                    Principal, FEW
+                                </div>
+                           </div>                           
+                            <img src="https://d262ilb51hltx0.cloudfront.net/fit/c/2000/1600/gradv/29/81/60/darken/25/1*Aq3yze-gXju4TCJKN4-2mA.png" 
+                                class="thumbnail img-responsive">
+                        </div>    
+                    </a>
+                </li>
+            
+            <li class="col-md-4 blog-thumbnail">
+                   <a href="https://medium.com/female-entrepreneurs-of-the-world/c1c18da1599f" target="_blank">
+                       <div class="blog-thumbnail-inner">
+                           <div class="background-overlay"></div>
+                           <div class="text-overlay">
+                               <div class="text-overlay-inner center-block">
+                                    <p class="quote">Behind closed doors, a trusted mentor (also a female founder) confided that as women in business, we are measured to a higher standard than our male counterparts. To gain admittance into the club, being equal is unacceptable — we must be exceptional.
+                                    </p>
+                                    <p class="continue-text">Continue reading &rarr;</p>
+                                </div>
+                           </div>
+                           <div class="caption-overlay">
+                                <div class="caption-title">
+                                    SWF Seeking Distinguished WM Cofounder
+                                </div>
+                                <div class="author">
+                                    Allison Carmen
+                                </div>
+                                <div class="author">
+                                    Founder & CEO, Material Mix
+                                </div>
+                           </div>                           
+                            <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/2000/1600/gradv/29/81/55/1*WWi9gpy2TNJKjzOF7CR5qQ.png" 
+                                class="thumbnail img-responsive">
+                        </div>    
+                    </a>
+                </li>    
+            
         <li class="col-md-4 blog-thumbnail">
                <a href="https://medium.com/p/2a8fc0550b3e" target="_blank">
                    <div class="blog-thumbnail-inner">
